# alter

./: CMakeLists.txt
src/: logic.c  logic.h  main.c  physics.c  physics.h  simple_snake.c  structs.h  view.c  view.h
src/maps/: map2.txt  map3.txt
